--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "debug" : "nodemon --inspect"
+    "debug": "nodemon --inspect"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,15 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.7",
     "sucrase": "^3.31.0"
   }
 }
