--- a/Front-End/.eslintrc.json
+++ b/Front-End/.eslintrc.json
@@ -22,6 +22,7 @@
     "rules": {
         "prettier/prettier":[ "error", { "endOfLine": "auto" } ],
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn"
+        "react-hooks/exhaustive-deps": "warn",
+        "no-unused-vars":"warn"
     }
 }
